--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <link rel="stylesheet" href="main.css">
         <script src="main.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mr.Keksident</title>
     </head>
     <body>
         <main>
